# src/main/java/com/perficient/shoppingcart/infrastructure/api/controllers/CustomerController.java
@@ -1,10 +1,13 @@
 package com.perficient.shoppingcart.infrastructure.api.controllers;
 
 
-import com.fasterxml.jackson.core.JsonParseException;
+import com.perficient.shoppingcart.application.GetCustomersByFiltersService;
 import com.perficient.shoppingcart.application.RegisterCustomerService;
 import com.perficient.shoppingcart.application.api.controller.CustomerApi;
 import com.perficient.shoppingcart.application.api.model.AddCustomerReq;
+import com.perficient.shoppingcart.application.api.model.GetCustomerPage;
+import com.perficient.shoppingcart.domain.valueobjects.CustomerReqFilterDomain;
+import com.perficient.shoppingcart.infrastructure.api.hateoas.CustomerPageModelAssembler;
 import com.perficient.shoppingcart.infrastructure.mappers.CustomerDomainMapper;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -12,6 +15,11 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
+import java.util.Optional;
+
+import static org.springframework.http.ResponseEntity.notFound;
 
 /**
  * Customer controller
@@ -22,16 +30,20 @@ public class CustomerController implements CustomerApi {
     /**
      * Register customer service
      */
-    private final RegisterCustomerService registerCustomerService;
+    @Autowired
+    private RegisterCustomerService registerCustomerService;
 
     /**
-     * Constructor
-     * @param registerCustomerService the Register customer service
+     * The get customers filter service
      */
     @Autowired
-    public CustomerController(RegisterCustomerService registerCustomerService) {
-        this.registerCustomerService = registerCustomerService;
-    }
+    private GetCustomersByFiltersService getCustomersByFiltersService;
+
+    /**
+     * Customer model assembler
+     */
+    @Autowired
+    private CustomerPageModelAssembler customerPageModelAssembler;
 
     /**
      * Register a new customer
@@ -42,5 +54,20 @@ public class CustomerController implements CustomerApi {
         var customer = CustomerDomainMapper.convertFromARequest(addCustomerReq);
         registerCustomerService.register(customer);
         return new ResponseEntity<>(HttpStatus.CREATED);
+    }
+
+    public ResponseEntity<GetCustomerPage> getCustomers(Integer offset, Integer limit, String firstName,
+            String lastName, String email, List<String> sort) {
+
+        CustomerReqFilterDomain customerDomain = new CustomerReqFilterDomain(
+                firstName, lastName, email, offset, limit, sort);
+
+        var customerPageDomain = getCustomersByFiltersService.findByFilter(customerDomain);
+
+        return Optional.of(customerPageDomain)
+                .map(customerPageModelAssembler::toModel)
+                .map(ResponseEntity::ok)
+                .orElse(notFound().build());
+
     }
 }
